query data from db & connect to controller
